--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,6 +1,12 @@
 @charset "utf-8";
 @import "_basic-color.scss";
 @import "variable.scss";
+@mixin topic-style($font){
+	font-weight: 700;
+	line-height: 30px;
+	font-size: $font
+}
+
 *{
   font-family: $font-family-open-sans;
 }
@@ -13,7 +19,7 @@ body {
 i {
 	color: $NormalBlack;
 }
-b, strong {
+b, strong, em {
 	font-weight: 700;
 }
 ol ol, ol ul, ul ol, ul ul{
@@ -23,48 +29,59 @@ ol ol, ol ul, ul ol, ul ul{
 // code table
 figure{
 	table,tr,td{
-		border:none;
+		border: none;
 	}
 	th,td{
-		padding:0;
+		padding: 0;
 		min-width: 0;
 	}
 }
 
 table,th,tr,td{
-	border:1px solid $Gray;
+	border: 1px solid $Gray;
+}
+
+figcaption{
+	font-size: 13px;
+	letter-spacing: 0;
+	color: $SlateGray;
+	text-align: center;
+	a{
+		text-decoration: underline!important;
+		color: $SlateGray!important;
+	}
 }
 th,td{
-	padding:5px;
+	padding: 5px;
 	min-width: 50px;
 }
 // directory
 #toc{
 	position: fixed;
-	top:50px;
-	left:0;
+	top: 50px;
+	left: 0;
 	max-height: 90%;
 	overflow: scroll;
-	overflow-x:hidden;
+	overflow-x: hidden;
 	margin: 0 0 20px 2%;
-  padding:1em;
-  line-height:1.5em;
+  padding: 1em;
+  line-height: 1.5em;
   .toc{
   	margin-top: 10px;
-		padding:0;
+		padding: 0;
 		.toc-child{
 			padding-left: 20px;
 		}
   }
   .toc-link{
-		color:#888;
+		color: #888;
   }
   .toc-active{
-		color:#111;
+		color: #111;
 		font-weight: bolder;
   }
   li{
-  	list-style-type:none;
+  	list-style-type: none;
   }
 }
 
@@ -89,7 +106,6 @@ th,td{
 	display: none;
 }
 
-//Each title'sq font-size
 h1,h2,h3,h4,h5,h6 {
 	margin-top: 0;
   font-family: $font-family-open-sans;
@@ -99,21 +115,15 @@ h1 {
 	font-size: $font-size-h1;
 }
 h2 {
+	@include topic-style($font-size-h2);
 	text-transform: uppercase;
-	font-weight: 700;
-	font-size: $font-size-h2;
-	line-height: 30px;
 	letter-spacing: 1px;
 }
 h3 {
-	font-weight: 700;
-	line-height: 30px;
-	font-size: $font-size-h3; 
+	@include topic-style($font-size-h3);
 }
 h4 {
-	font-weight: 700;
-	font-size: $font-size-h4;
-	line-height: 30px;
+	@include topic-style($font-size-h4);
 	color: $NormalBlack;
 }
 h1 span,h2 span,h3 span,h4 span,h5 span,h6 span,.navbar .nav > li > span {
@@ -132,11 +142,11 @@ h1 span,h2 span,h3 span,h4 span,h5 span,h6 span,.navbar .nav > li > span {
 		line-height: 32px;
 	}
 	.title{
-		color:#4a4a4a;
+		color: #4a4a4a;
 	}
 	h3:hover{
 		.title{
-			color:$NormalBlack;
+			color: $NormalBlack;
 		}
 	}
 }
@@ -156,26 +166,26 @@ h1 span,h2 span,h3 span,h4 span,h5 span,h6 span,.navbar .nav > li > span {
 		line-height: 24px;
 		padding-left: 10px;
 		border-left: 4px solid $DeepGreen;
-		margin-top:10px;
+		margin-top: 10px;
 	}
 	h3 {
 		line-height: 21px;
 		font-size: $font-size-h4;
-		margin-top:14px;
+		margin-top: 14px;
 	}
 	h4 {
 		font-size: $font-size-h5;
 		color: $NormalBlack;
 	}
 	.post-tags{
-		color:$White;
+		color: $White;
 		background-color: $Gray;
-		padding:2px 6px;
-		font-size:12px;
+		padding: 2px 6px;
+		font-size: 12px;
 		margin-right: 4px;
 	}
 	.post-time,.post-copyright{
-		color:#999;
+		color: $NormalGrey;
 		display: block;
 		font-size: 13px;
 		text-align: center;
@@ -186,22 +196,22 @@ h1 span,h2 span,h3 span,h4 span,h5 span,h6 span,.navbar .nav > li > span {
 		left: 8.5%;
 	}
 	.nogutter{
-		padding:10px 0;
+		padding: 10px 0;
 	}
 	.share-icon{
-		padding:0 .2em;
+		padding: 0 .2em;
 	}
 	.qrcode{
 		position: absolute;
 		bottom: 30px;
 		right: 80px;
-		height:108px;
-		border:1px solid #ebebeb;
-		padding:5px;
+		height: 108px;
+		border: 1px solid #ebebeb;
+		padding: 5px;
 		text-align: center;
 		border-radius: $border-radius-base;
-		box-shadow:1px 1px 2px #969696;
-		background-color: #fff;
+		box-shadow: 1px 1px 2px #969696;
+		background-color: $White;
 	}
 }
 .post-article{
@@ -220,12 +230,12 @@ section {
 a,a:active,a:focus,a:hover,a:visited,a:link {
 	color: $NormalBlack;
 	text-decoration: none;
-	word-break:break-all;
+	word-break: break-all;
 }
 
 // top-banner
 .container {
-	padding:0 $padding-huge-horizontal;
+	padding: 0 $padding-huge-horizontal;
 	ul{
 		a,a:active,a:focus,a:visited,a:link{
 			color: $DeepGreen;
@@ -238,7 +248,7 @@ a,a:active,a:focus,a:hover,a:visited,a:link {
 }
 @media (min-width: $screen-sm) {
 	.container {
-		padding:0 $padding-large-horizontal;
+		padding: 0 $padding-large-horizontal;
 	}
 }
 
@@ -248,7 +258,7 @@ a,a:active,a:focus,a:hover,a:visited,a:link {
 }
 
 [class*="col-"] {
-	padding:15px; 
+	padding: 15px; 
 	border: none;
 }
 
@@ -260,7 +270,7 @@ a,a:active,a:focus,a:hover,a:visited,a:link {
 blockquote {
 	margin: 40px 0;
 	p{
-		font:italic 15px 'Georgia', "Open Sans", "Helvetica Neue", "Helvetica", "Hiragino Sans GB", "Microsoft YaHei", "Source Han Sans CN", "WenQuanYi Micro Hei", Arial, sans-serif;
+		font: italic 15px 'Georgia', "Open Sans", "Helvetica Neue", "Helvetica", "Hiragino Sans GB", "Microsoft YaHei", "Source Han Sans CN", "WenQuanYi Micro Hei", Arial, sans-serif;
 	}
 }
 
@@ -276,10 +286,12 @@ blockquote {
 	background-color: $NormalBlack;
 }
 ::-moz-selection {
- color:$White;
- background-color:$NormalBlack;
+ 	color:$White;
+ 	background-color:$NormalBlack;
 }
-.clear{clear: both;}
+.clear{
+	clear: both;
+}
 a, button,
 .sb-close img,
 .menu-icon{
@@ -292,7 +304,7 @@ a, button,
 
 // article dividing line
 hr {
-	margin:40px 0 20px;
+	margin: 40px 0 20px;
 }
 
 input[placeholder],
@@ -317,7 +329,6 @@ input[placeholder],
 	color: $NormalGrey;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
 }
-
 
 .archive-list,.category-list,.tag-list{
 	line-height: 25px;
@@ -381,11 +392,11 @@ input[placeholder],
 }	
 .navbar {
 	position: fixed;
-	top:0;
+	top: 0;
 	.nav{
-		width:100%;
-		text-align:center;
-		height:50px;
+		width: 100%;
+		text-align: center;
+		height: 50px;
 		.welcome{
 			cursor: pointer;
 		}		
@@ -394,17 +405,17 @@ input[placeholder],
 		float:none;
 		display:inline-block;
 	}
-	.nav > li > span {
+	.nav > li > span ,.nav > li > a > i{
 		font-size: 12px
 	}
 	.nav > li a:hover,.nav>li>a:focus{
 		background-color: transparent;
 	}
 	.nav > li > a,.navbar .nav li.nolink{
-		padding:0 10px;
-		margin:16px 0px;
+		padding: 0 10px;
+		margin: 16px 0px;
 		color: $NormalBlack;
-		font:400 11px/14px 'Montserrat', "Open Sans", "Helvetica Neue", "Helvetica", "Hiragino Sans GB", "Microsoft YaHei", "Source Han Sans CN", "WenQuanYi Micro Hei", Arial, sans-serif;
+		font: 400 12px/14px 'Montserrat', "Open Sans", "Helvetica Neue", "Helvetica", "Hiragino Sans GB", "Microsoft YaHei", "Source Han Sans CN", "WenQuanYi Micro Hei", Arial, sans-serif;
 		text-transform: uppercase;
 		letter-spacing: 1px;
 		text-shadow: none;
@@ -412,9 +423,6 @@ input[placeholder],
 	}
 	.nav > li > a{
 		display: block;
-	}
-	.nav > li > a > i{
-		font-size: 12px;
 	}
 	.nav > li:last-child > a,.nav > li:last-child {
 		border-right:none;	
@@ -427,8 +435,8 @@ input[placeholder],
 	-o-transition: background-color 400ms linear;
 	-ms-transition: background-color 400ms linear;
 	transition: background-color 400ms linear;
-	z-index:10;
-	border:none;
+	z-index: 10;
+	border: none;
 }
 .lightnav .navbar-inner.lightnav-alt .nav > li > a{
 	color: $NormalBlack;
@@ -503,7 +511,7 @@ input[placeholder],
 				line-height: 28px;
 				background-color: #0085a1;
 				.category-list-link,.tag-list-link,.archive-list-link{
-					color:#fff;
+					color: $White;
 				}
 				.category-list-count,.tag-list-count,.archive-list-count{
 					display: none;
@@ -592,8 +600,8 @@ button.navbar-toggle .icon-bar {
 }
 
 .sb-slidebar {
-	background-color: $NormalBlack; /* Background colour. */
-	color: $DarkGrey; /* Text colour. */
+	background-color: $NormalBlack;
+	color: $DarkGrey;
 	font-weight: 700;
 	font-size: 14px;
 	cursor: default;
@@ -603,13 +611,13 @@ button.navbar-toggle .icon-bar {
 	text-align:center;
 	font-size: 16px;
 	a{
-		color: $DarkGrey; /* Link colour. */
+		color: $DarkGrey;
 		text-decoration: none;
 		font-weight: 700;
 		text-transform: uppercase;
 		font-size: 13px;
 		&:hover{
-			color: $White; /* Link hover colour. */
+			color: $White;
 		}
 	}
 	.site-author{
@@ -724,7 +732,7 @@ button.navbar-toggle .icon-bar {
 		}
 		.search{
 			float: left;
-			width:36%;
+			width: 36%;
 			position: absolute;
 			bottom: 10px;
 			#searchform{
@@ -763,7 +771,7 @@ button.navbar-toggle .icon-bar {
 	background-color: $White;
 	.boxes{
 		padding-top: 50px;
-		.col-md-3,.col-md-6{
+		.col-md-3, .col-md-6{
 			padding: 15px;
 		}
 		.i{
@@ -782,16 +790,16 @@ button.navbar-toggle .icon-bar {
 * Global footer, (all pages)
 ******************************************************* */
 footer {
-	padding:1% 0;
-	background:$NormalBlack;
+	padding: 1% 0;
+	background: $NormalBlack;
 	z-index: 9;
 	position: relative;
 	.footer{
 		width: 95%;
-		margin:0 auto;
+		margin: 0 auto;
 		padding-top: 10px;
 		.wrapper{
-			margin:0;
+			margin: 0;
 		}
 	}
 	.copy{
@@ -800,12 +808,12 @@ footer {
 		p{
 			font-size: 12px;
 			color: #767D84;
-			margin:0;
+			margin: 0;
 		}
 		a{
 			color: #767D84;
 			&:hover{
-				color:$White;
+				color: $White;
 			}
 		}
 	}
@@ -828,43 +836,35 @@ footer {
 		#searchform{
 			margin-top: 20px;
 			.icon-search{
-				color:#ccc;
-				margin-top:8px;
+				color: #ccc;
+				margin-top: 8px;
 			}
 			#searchbox{
-				height:30px;
+				height: 30px;
 				background-color: $NormalBlack;
-				border:1px solid $NormalBlack;
+				border: 1px solid $NormalBlack;
 				padding: 0 10px 0px 18px;
-				border-bottom:1px solid gray;
+				border-bottom: 1px solid gray;
 			}
 		}
 	}
 }
-/* *******************************************************
-* Global background-color classes:
-* simple apply class to any element to produce the desired
-* colored background.
-* Note: keep at end of this document
-******************************************************* */
 
-/* Flat colors */
 .beige-dk{
-	background-color: rgb(247, 247, 247);
+	background-color: #f7f7f7;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
 	-khtml-opacity: .7;
 	-moz-opacity: .7;
 	opacity: .7;
 }
 
-/*add css*/
 .readMore a {
 	font-size: 12px;
 	color: $Gray;
-	padding:2px 10px;
+	padding: 2px 10px;
 	border: 1px solid $Gray;
 	border-radius: 20px;
-	color:$DarkGrey!important;
+	color: $DarkGrey!important;
 	&:hover{
 		background-color: $Gray;
 		color: $White!important;
@@ -876,7 +876,7 @@ footer {
 	display: block;
 	margin: auto;
 	a{
-		padding:0 10px;
+		padding: 0 10px;
 		border: 1px solid $Gray;
 		border-radius: 20px;
 		max-width: 100%;
@@ -907,7 +907,7 @@ footer {
 	position: fixed;
 	z-index: 10;
 	bottom: 132px;
-	right:20px;
+	right: 20px;
 	display: none;
 	ul{
 		li{
@@ -922,10 +922,10 @@ footer {
 pre{
 	.line{
 		.label{
-			color:#333;
+			color: #333;
 			padding: 0;
 			font-size: 13px;
-			font-weight:400;
+			font-weight: 400;
 		}
 	}
 }
@@ -933,14 +933,14 @@ pre{
 .duoshuo,.pagination,.nogutter{
 	width: 64%;
 	text-align: center;
-	margin:0 auto;
+	margin: 0 auto;
 }
 .nogutter{
 	width: 100%;
 }
 .summary,.post-content .nogutter{
-	width:100%;
-	margin:auto;
+	width: 100%;
+	margin: auto;
 }
 .summary{
 	padding-bottom: 6px;
@@ -953,14 +953,14 @@ pre{
 	}
 }
 .egg-tips{
-	width:860px;
-	padding:10px;
-	border:1px solid hsla(0,0%,0%,0.25);
+	width: 860px;
+	padding: 10px;
+	border: 1px solid hsla(0,0%,0%,0.25);
 	border-radius: $border-radius-base;
-	box-shadow:0 0 18px rgba(0,0,0,0.4);
+	box-shadow: 0 0 18px rgba(0,0,0,0.4);
 	background-color: $White;
 	.egg-header{
-		border-bottom:1px solid #e5e5e5;
+		border-bottom: 1px solid #e5e5e5;
 		font-size: 18px;
 	}
 	.egg-close{
@@ -972,21 +972,21 @@ pre{
 		}
 	}
 	.egg-helps{
-		padding:15px 0;
+		padding: 15px 0;
 		table{
 			border:none;
 			tr,td{
 				border:none;
 			}
 			th{
-				color:#333;
+				color: #333;
 				line-height: 1.5;
-				border:none;
+				border: none;
 				text-align: left;
 			}
 			kbd{
 				display: inline-block;
-				padding:3px 5px;
+				padding: 3px 5px;
 				background-color: #fcfcfc;
 				margin-right: 2px;
 				color:#555;
@@ -1002,28 +1002,28 @@ pre{
 }
 
 .icon-Popular_GitHub:hover{
-	color:#4078c0;
+	color: #4078c0;
 }
 .icon-CN_tencent_wechat:hover{
-	color:$WeixinGreen;
+	color: $WeixinGreen;
 }
 .icon-CN_sina_weibo:hover{
-	color:$WeiboRed;
+	color: $WeiboRed;
 }
 .icon-Popular_Twitter:hover{
-	color:$TwitterBlue;
+	color: $TwitterBlue;
 }
 .icon-CN_zhihu:hover{
-	color:$ZhihuBlue;
+	color: $ZhihuBlue;
 }
 .icon-CN_tencent_qzone:hover{
-	color:$QzoneYellow;
+	color: $QzoneYellow;
 }
 .icon-Popular_Facebook:hover{
-	color:$FacebookPurple;
+	color: $FacebookPurple;
 }
 .icon-Popular_G:hover{
-	color:$GoogleRed;
+	color: $GoogleRed;
 }
 .icon-search{
 	position: absolute;
